kubernetes/deploy/zigbee/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik-internal
  name: zigbee2mqtt
spec:
  rules:
  - host: zigbee.vandeneede.org
    http:
      paths:
      - backend:
          service:
            name: zigbee2mqtt
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
